<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_school"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/hobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_hobbies"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_profession"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_address"
        android:textStyle="italic"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/cancel_button"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/cancel"
            android:layout_marginRight="5dp"
            android:text="@string/submit_button"/>
    </RelativeLayout>

</LinearLayout>